done making server for Leafwetness sensor

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.url= jdbc:postgresql://db.bcndglammmumaxqcwhqr.supabase.co:543
 spring.datasource.username=postgres
 spring.datasource.password=lm6RTs5w5RMa6Lgf
 spring.jpa.hibernate.ddl-auto=update
+server.port=${PORT:8080}
+spring.jpa.open-in-view=false
