done making server for Leafwetness sensor

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Leaf-wetness-sensor
-spring.datasource.url= jdbc:postgresql://db.bcndglammmumaxqcwhqr.supabase.co:5432/postgres
+spring.datasource.url= jdbc:postgresql://db.bcndglammmumaxqcwhqr.supabase.co:5432/postgres?sslmode=require
 spring.datasource.username=postgres
 spring.datasource.password=lm6RTs5w5RMa6Lgf
 spring.jpa.hibernate.ddl-auto=update
